# SolarEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.MD  README.MD  convert_resource.py
Engine/: CMakeLists.txt  Precompiled.h
Main/: CMakeLists.txt
main/: main.cpp
src/: CMakeLists.txt
